deploy/fleet-agent/fleet-agent-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet-agent-webhook
  namespace: fleet-agent
  labels:
    app: fleet-agent
    app.kubernetes.io/part-of: miladyos
spec:
  selector:
    app: fleet-agent
  ports:
    - name: webhook
      port: 9000
      targetPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-agent-ui
  namespace: fleet-agent
  labels:
    app: fleet-agent
    app.kubernetes.io/part-of: miladyos
spec:
  selector:
    app: fleet-agent
  ports:
    - name: ui
      port: 8080
      targetPort: 8080
